--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 PORT=5000
 TMDB_API_KEY=f89e5199c51d928d4280f590b31ca5cd
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=https://skyflixer.netlify.app
 NODE_ENV=development
 
 # ============================================
