--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,7 +64,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "vite": "^5.4.19"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -86,7 +87,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19",
     "vitest": "^3.2.4"
   }
 }
