--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev:backend": "cd backend && npm run dev",
         "dev:frontend": "cd frontend && npm run dev",
         "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-        "build": "cd frontend && npm run build",
+        "build": "cd frontend && npm install && npm run build",
         "start:backend": "cd backend && npm start",
         "preview": "cd frontend && npm run preview"
     },
